# msd-sdk-python

./: CHANGELOG.md  README.md  pyproject.toml
docs/: key-management.md  typed-data.md
src/msd_sdk/: __init__.py  _compact_key.py  _types.py  core.py  key_management.py  trust_network.py
tests/: test_compact_key.py  test_content_hash.py  test_create_granule.py  test_sign.py  test_sign_and_embed_dict.py  test_sign_and_embed_files.py  test_verify.py
