[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msd-sdk"
version = "0.2.0"
description = "Python SDK for Meta Structured Data"
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Ulf Bissbort" },
    { name = "Staple AI" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["zef==0.1.29"]

[project.urls]
Homepage = "https://msd-protocol.org"
Repository = "https://github.com/msd-protocol/msd-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/msd_sdk"]
